--- a/package.json
+++ b/package.json
@@ -6,13 +6,22 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "s1uns",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@solana-developers/helpers": "^2.3.0",
     "@solana/web3.js": "^1.91.8",
     "bigint-buffer": "^1.1.5",
-    "esrun": "^3.2.26"
-  }
+    "esrun": "^3.2.26",
+    "prompt-sync": "^4.2.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/s1uns/solana-training.git"
+  },
+  "bugs": {
+    "url": "https://github.com/s1uns/solana-training/issues"
+  },
+  "homepage": "https://github.com/s1uns/solana-training#readme",
+  "description": ""
 }
