--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@solana-developers/helpers": "^2.3.0",
+    "@solana/spl-token": "^0.4.6",
     "@solana/web3.js": "^1.91.8",
     "bigint-buffer": "^1.1.5",
     "esrun": "^3.2.26",
